2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlambda.h, -src/filterlambda.cpp, src/Makefile.am:
	  - Apply "indent -nut" + manual adjustments.
	  - Move FilterLambda member functions to header and make them inline.
	  - Drop empty d-tor.
	  - Remove now-unused filterlambda.h.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h:
	* src/abswordseg.cpp:
	* src/wordseg.cpp:
	* src/filterx.h:
	* src/filterlatex.h:
	* src/filterlatex.cpp:
	* src/filefilter.h:
	* src/filefilter.cpp:
	* src/maxwordseg.h:
	  - Change pointer declarations to C++ style.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterhtml.h, src/filterhtml.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::Print):
	  - Remove unused var "lwbr".

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filefilter.h, src/filefilter.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterx.h, -src/filterx.cpp, src/Makefile.am:
	  - Drop unused member "fileopen".
	  - Adjust c-tor to use initialization list; also initialize
	    wordBreakStr to a default value.
	  - Move all FilterX member functions to header and make them inline.
	  - Drop now-unneeded filterx.cpp.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterx.cpp, src/filterx.h:
	  - Apply "indent -nut" + manual adjustments.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordstack.h:
	  - Add preprocessor to prevent duplicated inclusion.

2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordstack.h:
	  - Apply "indent -nut" + manual adjustments.
